[tool.poetry]
name = "code-challenges"
version = "0.1.0"
description = "code challenges, python edition"
authors = ["Eric Butera <eric@ericbutera.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.19.0"
black = "^22.3.0"
flake8-black = "^0.3.3"
isort = "^5.10.1"
mypy = "^0.960"
pytest-mock = "^3.7.0"
pytest-datadir = "^1.3.1"
pytest-cov = "^3.0.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
